--- a/Personal Profile/contents/config.yml
+++ b/Personal Profile/contents/config.yml
@@ -1,5 +1,5 @@
 title: Qinghai Lin's Homepage
 page-top-title: Qinghai Lin
 top-section-bg-text: Personal Profile
-home-subtitle: Qinghai (higher) Lin |&ensp;蔺庆海
+home-subtitle: Qinghai Lin |&ensp;蔺庆海
 # copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
