--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Qinghai Lin's Homepage
 page-top-title: Qinghai Lin
-top-section-bg-text: 个人主页（Personal Profile）
+top-section-bg-text: 个人主页/Personal Profile
 home-subtitle: Qinghai Lin |&ensp;蔺庆海
 # copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
